updates with reset password and comments section

--- a/public/stylesheets/less/_content.less
+++ b/public/stylesheets/less/_content.less
@@ -590,3 +590,20 @@
 .hideBlock{
     display: none;
 }
+
+.comment-list{
+    padding:0;
+    list-style: none;
+
+    li{
+        padding-bottom:10px;
+        .alias{
+            .alias-date{
+                font-style: italic;
+                font-size: 10px;
+                display: block;
+            }
+        }
+    }
+    
+}
