--- a/views/partials/admin_side_nav.ejs
+++ b/views/partials/admin_side_nav.ejs
@@ -4,19 +4,19 @@
     </div>
     <div class="card-body">
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="/njs-admin/manage/user">Manage Users</a></li>
-            <li class="list-group-item"><a href="/njs-admin/manage/attorneys">Manage Attorneys</a></li>
-            <li class="list-group-item"><a href="/njs-admin/manage/trademark">Manage Trademarks</a></li>
-            <li class="list-group-item"><a href="/njs-admin/manage/orders">Manage Orders</a></li>
-            <li class="list-group-item"><a href="/njs-admin/manage/cart-items">Manage Cart Items</a></li>
-            <li class="list-group-item"><a href="/njs-admin/manage/country">Manage Countries</a></li>
-            <li class="list-group-item"><a href="/njs-admin/manage/promo">Manage PromoCode</a></li>
-            <li class="list-group-item"><a href="/njs-admin/manage/articles">Manage Articles</a></li>
-            <li class="list-group-item"><a href="/njs-admin/manage/activities">Manage Activity Logs</a></li>
-            <li class="list-group-item"><a href="/njs-admin/manage/euactions">Manage EUIPO Action Codes</a></li>
-            <li class="list-group-item"><a href="/njs-admin/manage/tasks">Manage Task</a></li>
-            <li class="list-group-item"><a href="/njs-admin/manage/events">Manage Events</a></li>
-            <li class="list-group-item"><a href="/njs-admin/manage/leads">Manage Leads</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/orders">Orders</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/trademark">Trademarks</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/cart-items">Cart Items</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/promo">PromoCode</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/user">Users</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/attorneys">Attorneys</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/country">Countries</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/articles">Articles</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/activities">Activity Logs</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/euactions">EUIPO Action Codes</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/tasks">Task</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/events">Events</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/leads">Leads</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/opposition-leads">Opposition Leads</a></li>
             <li class="list-group-item"><a href="/login">Logout</a></a></li>
         </ul>
