--- a/views/public/login.ejs
+++ b/views/public/login.ejs
@@ -39,6 +39,9 @@
 								<a style="color:#000;" href="/register">
 									Sign Up
 								</a></p>
+								<p class="text-right mt-3"><a style="color:#007bff;font-size: 10px;" href="/forgot-password">
+									Forgot Password
+								</a></p>
 							</div>
 						</div>
 					</form>
