--- a/views/order/cart.ejs
+++ b/views/order/cart.ejs
@@ -53,13 +53,13 @@
 							
 						<% if(!hasCode) { %>
 						<form method="post" action="/cart/add-promo" class="row g5 align-items-center">
-							<div class="col-auto">
+							<div class="col-3">
 								<label for="" class="visually-hidden">Promo Code</label>
 							</div>
-							<div class="col-auto">
+							<div class="col-5">
 							  <input type="text" class="form-control" placeholder="Promo Code" name="promoCode">
 							</div>
-							<div class="col-auto">
+							<div class="col-4">
 							  <button type="submit" class="btn btn-primary">Apply Code</button>
 							</div>
 						</form>
