--- a/views/order/checkout.ejs
+++ b/views/order/checkout.ejs
@@ -76,7 +76,7 @@
 	</div>
 
 	<!-- FORM BLOCK -->
-	<div class="cc-form-wrap nc-form-wrap" style="margin-bottom:40px">
+	<div class="cc-form-wrap nc-form-wrap" style="margin-bottom:40px; margin-top:40px;">
 		<div class="row justify-content-center">
 			<div class="col-12"><div class="cc-form">
 				<form class="cc-form-self" action="/placeorder" method="post" id="payment-form">
