--- a/views/admin/activities/index.ejs
+++ b/views/admin/activities/index.ejs
@@ -15,7 +15,7 @@
 </div>
                     
 <div clss="col-md-12">
-    <table id="myListDataTable" class="display" style="width:100%">
+    <table id="dataTableTrademarks" class="display" style="width:100%">
         <thead>
             <tr>
                 <th>IP Address</th>
